k8s/appsrv.yaml
# Quarkus Application Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asp-rest-demo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: asp-rest-demo
  template:
    metadata:
      labels:
        app: asp-rest-demo
    spec:
      containers:
        - name: asp-rest-demo
          image: ghcr.io/schletz/asp-rest-demo:latest 
          # remove this when stable. Currently we do not take care of version numbers
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /api/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 15
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 60
            periodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: asp-rest-demo

spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: asp-rest-demo
